--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 											<li>Work with Instance Owner to ensure health and sanity of Production Environment with various other Testing and Patching Instances.</li>
 											<li>Manage Production cutover activities to ensure smooth and elegent migration of objects for streamlining various business critical activities.</li>
 											<li>Ensure availability and health of various Non-Prod environments for development and testing activities of major implementation projects.</li>
-											<li>SOPC for Automation/Innovation team and knowledge Articles teamat project level.</li>
+											<li>SPOC for Automation/Innovation team and knowledge Articles teamat project level.</li>
 											<li>Member of the UI-Path Automation Team thus implemented multiple BOTs in Non-Prod and Prod environments along with reducing various daily and weekly reporting/audit activities</li>
 											<li>Worked with On-site coordinators Quality Assurance Team to resolve Technical issue, also debugged and troubleshoot various Oracle Application issues.</li>
 											<li>Documented all methodologies in technical manuals so that it can be used by others in future.</li>
