--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
 											<a href="#" class="image"><img src="images/SMIT.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Saroj Mohan Institute Of Technology</h4>
-												<p>Bachhelor of Technology- B.Tech, Electronics and Communications Engineering
+												<p>Maulana Abul Kalam Azad University of Technology
+												</br>
+													Bachelor of Technology- B.Tech, Electronics and Communications Engineering
 												</br>2016 - 2020
 												</p>
 											</div>
