--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 										<p>Associate Consultant at Capgemini<br />
 										North America Oracle|Amaricas Business Unit</p>
 									</header>
-									<p>A self-motivated and result oriented IT professional offering 3+ years of experience in Oracle Apps(EBS) and Oracle Supply chain management. Having expertise working for one of the biggest ERPs in Aviation sector. Someome with a vision for continuous innovation and automation and hunger to update skillset.</p>
+									<p>A self-motivated and result oriented IT professional offering 2+ years of experience in Oracle Apps(EBS) and Oracle Supply chain management. Having expertise working for one of the biggest ERPs in Aviation sector. Someome with a vision for continuous innovation and automation and hunger to update skillset.</p>
 								</div>
 							</section>
 
-						<!-- Two -->
+						<!-- Skills -->
 							<section id="two">
 								<div class="container">
 									<h3>Key Skills</h3>
@@ -115,7 +115,7 @@
 								</div>
 							</section>
 
-						<!-- Three -->
+						<!-- Experience -->
 							<section id="three">
 								<div class="container">
 									<h3>Experience</h3>
@@ -152,7 +152,7 @@
 								</div>
 							</section>
 
-						<!-- Four -->
+						<!-- Education -->
 							<section id="four">
 								<div class="container">
 									<h3>Education</h3>
@@ -190,8 +190,33 @@
 									</div>
 								</div>
 							</section>
+						<!--Social media-->
+							<section id="social">
 
-				<!-- Footer -->
+								<div class="container">
+									<p1>Reach out to me</p1>
+								</br>
+									<p1>Contact no: +918145266757</p1>
+								</br>
+									<p1>Email: krishnanshudey2014@gmail.com</p1>
+								</br>
+									<p1>Address: VILL + P.O.- SALEPUR, P.S.- ARAMBAGH, DIST- HOOGHLY, STATE- WEST BENGAL, PIN-712616</p1>
+							
+								<br>
+								<br>
+									<ul class="icons">
+										<li><a href="https://twitter.com/Krishnanshu34" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/krishnanshu.dey.5" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/krishnanshu34/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://github.com/KRISHNANSHUCODER" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.linkedin.com/in/krishnanshu-dey-91aa8a174/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+										<li><a href="https://mail.google.com/mail" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+										
+									</ul>
+								</div>
+							</section>
+
+				<!-- Contact
 					<section id="footer">
 						<div class="container">
 							<p1>Reach out to me</p1>
@@ -204,6 +229,7 @@
 					</section>
 
 			</div>
+		-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
