--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<p>Associate Consultant at Capgemini<br />
 										North America Oracle|Amaricas Business Unit</p>
 									</header>
-									<p>A self-motivated and result oriented IT professional offering 3+ years of experience in Oracle Apps(EBS) and Oracle Supply chain management. Having expertise working for one of the biggest ERPs in Aviation sector. Someome with a vision for continuous innovation and automation and hunger to update skillset.</p>
+									<p>A self-motivated and result oriented IT professional offering 2+ years of experience in Oracle Apps(EBS) and Oracle Supply chain management. Having expertise working for one of the biggest ERPs in Aviation sector. Someome with a vision for continuous innovation and automation and hunger to update skillset.</p>
 								</div>
 							</section>
 
@@ -71,7 +71,7 @@
 									<h4>Functional:</h4>
 									<p>Team Building, Team Leading, Strategic/Tactical Planing, Business Analysis and Development, Compliance and Governance(Business Audit), Excellent Communication and Interpretation Skills</p>
 									<h4>Technical:</h4>
-									<p>Oracle Apps, SQL, PL/SQL, Project portfolio management(HP PPM), Appworx(Workflow Automation Suite), Unix, ServiceNow reporting, Core JAVA, Python, AWS, Generative AI, Google Cloud, Salesforce, Flutter, Tableau, HTML, CSS, Java Script</p>
+									<p>Oracle Apps, SQL, PL/SQL, Project portfolio management(HP PPM), Appworx(Workflow Automation Suite), Unix, ServiceNow reporting, Core JAVA, Python, AWS, Generative AI, Google Cloud, PowerBI, Salesforce, Flutter, Tableau, HTML, CSS, Java Script</p>
 									<h3>Project</h3>
 									<p><b>Type of Industry:</b> Information Technology in Aviation
 									</br>
@@ -79,7 +79,7 @@
 									</br>
 									<b>Role/Title:</b> Techno-Functional Consultant
 									</br>
-									<b>Project Duration:</b> 30 months
+									<b>Project Duration:</b> 38 months
 									</br>
 									<b>Responsibilities:</b> 
 											<li>Taking care of the Value Chain Planning(VCP) which runs daily for Business along with its major plans like DRP and MRP.</li>
