--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
 										<p>Associate Consultant at Capgemini<br />
 										North America Oracle|Amaricas Business Unit</p>
 									</header>
-									<p>A self-motivated and result oriented IT professional offering 3+ years of experience in Oracle Apps(EBS) and Oracle Supply chain management. Having expertise working for one of the biggest ERPs in Aviation sector. Someome with a vision for continuous innovation and automation and hunger to update skillset.</p>
+									<p>Dynamic Oracle SCM professional with 4 years of 
+										experience, excelling in system administration, functional 
+										consulting, and compliance domains. Adept at driving 
+										successful implementations, ensuring system health, and 
+										facilitating smooth operations for large-scale ERP 
+										environments in the aviation sector. Recognized for 
+										expertise in Oracle Inventory Management and a proven 
+										track record of leading critical go-live events, including 
+										transitioning from on-premises infrastructure to OCI. </p>
 								</div>
 							</section>
 
@@ -79,7 +87,7 @@
 									</br>
 									<b>Role/Title:</b> Techno-Functional Consultant
 									</br>
-									<b>Project Duration:</b> 38 months
+									<b>Project Duration:</b> 47 months
 									</br>
 									<b>Responsibilities:</b> 
 											<li>Taking care of the Value Chain Planning(VCP) which runs daily for Business along with its major plans like DRP and MRP.</li>
@@ -143,7 +151,7 @@
 											<a href="#" class="image"><img src="images/capgemini.gif" alt="" /></a>
 											<div class="inner">
 												<h4>Analyst/Software Engineer</h4>
-												<p>Mar 2021-Oct 2022
+												<p>Mar 2021-Oct 2023
 												</br>Bangalore Urban, Karnataka, India
 												</p>
 											</div>
@@ -205,7 +213,7 @@
 								<br>
 								<br>
 									<ul class="icons">
-										<li><a href="https://twitter.com/Krishnanshu34" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://x.com/krishnansh54535" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.facebook.com/krishnanshu.dey.5" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/krishnanshu34/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://github.com/KRISHNANSHUCODER" class="icon brands fa-github"><span class="label">Github</span></a></li>
