--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://twitter.com/Krishnanshu34" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://x.com/krishnansh54535" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/krishnanshu.dey.5" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/krishnanshu34/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/KRISHNANSHUCODER" class="icon brands fa-github"><span class="label">Github</span></a></li>
