--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/profile.jpeg" alt="" /></span>
+					<span class="image avatar"><img src="images/Profile1.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Krishnanshu Dey</a></h1>
 					<p>Software Engineer at Capgemini<br />
 					</p>
@@ -57,18 +57,15 @@
 								<div class="container">
 									<header class="major">
 										<h2>Krishnanshu Dey</h2>
-										<p>Associate Consultant at Capgemini<br />
+										<p>Consultant at Capgemini<br />
 										North America Oracle|Amaricas Business Unit</p>
 									</header>
-									<p>Dynamic Oracle SCM professional with 4 years of 
-										experience, excelling in system administration, functional 
-										consulting, and compliance domains. Adept at driving 
-										successful implementations, ensuring system health, and 
-										facilitating smooth operations for large-scale ERP 
-										environments in the aviation sector. Recognized for 
-										expertise in Oracle Inventory Management and a proven 
-										track record of leading critical go-live events, including 
-										transitioning from on-premises infrastructure to OCI. </p>
+									<p>Dynamic Oracle SCM professional with 4+ years of experience spanning Oracle E-Business Suite and Oracle Fusion Cloud applications. 
+									   Skilled in system administration, functional consulting, data migration, and compliance-driven processes. 
+									   Adept at driving successful ERP implementations, ensuring system health, and enabling seamless operations across large-scale enterprise environments in aviation and manufacturing sectors.
+									   Strong expertise in Oracle Inventory Management and Oracle Fusion Inventory & PIM modules, with proven capability in resolving critical production issues, managing item lifecycle processes, and improving master data quality.
+									   Experienced in handling go-live transitions, cross-functional coordination, and enhancing business processes through automation and data integrity improvements. 
+									   Recognized for supporting high-impact initiatives, including transitions from on-premises EBS to cloud-based OCI infrastructure. </p>
 								</div>
 							</section>
 
@@ -79,15 +76,16 @@
 									<h4>Functional:</h4>
 									<p>Team Building, Team Leading, Strategic/Tactical Planing, Business Analysis and Development, Compliance and Governance(Business Audit), Excellent Communication and Interpretation Skills</p>
 									<h4>Technical:</h4>
-									<p>Oracle Apps, SQL, PL/SQL, Project portfolio management(HP PPM), Appworx(Workflow Automation Suite), Unix, ServiceNow reporting, Core JAVA, Python, AWS, Generative AI, Google Cloud, PowerBI, Salesforce, Flutter, Tableau, HTML, CSS, Java Script</p>
-									<h3>Project</h3>
+									<p>Oracle Apps, Oracle Fusion cloud, SQL, PL/SQL, Project portfolio management(HP PPM), Appworx(Workflow Automation Suite), Unix, ServiceNow reporting, Core JAVA, Python, AWS, Generative AI, Google Cloud, PowerBI, Salesforce, Flutter, Tableau, HTML, CSS, Java Script</p>
+									<h3>Projects</h3>
+									<h4><b>Project:</b> Maintaining ERP functionally and technically
+									</br></h4>
 									<p><b>Type of Industry:</b> Information Technology in Aviation
 									</br>
-									<b>Project:</b> Maintaining ERP functionally and technically
-									</br>
+									
 									<b>Role/Title:</b> Techno-Functional Consultant
 									</br>
-									<b>Project Duration:</b> 47 months
+									<b>Project Duration:</b> 36 months
 									</br>
 									<b>Responsibilities:</b> 
 											<li>Taking care of the Value Chain Planning(VCP) which runs daily for Business along with its major plans like DRP and MRP.</li>
@@ -105,6 +103,34 @@
 									</br>
 									<b>Special Tools:</b> Appworx(Workfload Automation Suite), Project Portfolio Management(HP PPM), DataLoad, WinSCP, Putty
 									</br>
+									<br>
+									<h4><b>Project:</b> Oracle Fusion Inventory & Product Information Management (PIM)
+									</br></h4>
+									<p><b>Type of Industry:</b> Additive Manufacturing (Aviation & Engineering)
+									</br>
+									
+									<b>Role/Title:</b> Techno-Functional Consultant
+									</br>
+									<b>Project Duration:</b> 12+ months (Ongoing)
+									</br>
+									<b>Responsibilities:</b> 
+											<li>Managing Oracle Fusion Inventory module operations including item creation, item lifecycle updates, reservations, transfers, and inventory adjustments.</li>
+											<li>Handling Product Information Management (PIM) processes by ensuring accurate item definitions, item structures, attribute management, and compliance with business data standards.</li>
+											<li>Collaborating with business users to analyze inventory issues, identify root causes, and deliver quick functional fixes to support daily manufacturing and supply chain operations.</li>
+											<li>Supporting engineering and supply chain teams by configuring Item Templates, Item Classes, and Attribute Groups to streamline item onboarding processes.</li>
+											<li>Overseeing Inventory Transaction Errors (ITEs), troubleshooting failures, and coordinating with technical teams for backend fixes when required.</li>
+											<li>Ensuring data integrity across systems by monitoring item synchronization between PIM, Inventory, and downstream modules.</li>
+											<li>Participating in new feature rollouts, testing enhancements, and validating end-to-end inventory transactions before deployment.</li>
+											<li>Preparing process documentation, functional SOPs, and knowledge articles for smoother handovers and user enablement.</li>
+											<li>Acting as a point of contact for cross-functional teams including manufacturing, engineering, procurement, and quality teams for all Inventory and PIM-related requirements.</li>
+									</br>
+									<b>Operating System:</b> Windows
+									</br>
+									<b>Softwate/Languages:</b> Oracle Fusion Cloud, Oracle Visual Builder, SQL Developer, Office 365, PL/SQL, SQL, REST API fundamentals
+									</br>
+									<b>Special Tools:</b> Oracle Cloud Inventory Management, Product Information Management (PIM), Flexi Desktop/Intellinum, Atomic, Fusion Sandbox Tools, ADF Diagonistics, OTBI & BI Publisher Reports, WinSCP, Putty
+									</br>
+
 									</br>
 									<h3>Languages</h3>
 									<p>English, Hindi, Bengali</p>
@@ -127,13 +153,24 @@
 							<section id="three">
 								<div class="container">
 									<h3>Experience</h3>
-									<p>Experience in mapping and importing data from legacy system to Oracle Application using DB links, SQL Loader, External tables, Oracle Interface tables and Oracle standard API's. Experience in application Development Oracle Apps E-Business suite, Oracle Workflows.</p>
+									<p>Experience in mapping and importing data from legacy systems to Oracle Applications using DB links, SQL Loader, External Tables, Oracle Interface Tables, and Oracle Standard APIs. Hands-on experience in application development within Oracle Apps E-Business Suite and Oracle Workflows.
+
+Extensive experience in Oracle Fusion Cloud—specializing in Inventory and Product Information Management (PIM) modules. Skilled in Item creation and lifecycle management, Inventory transactions, error resolution, data validation, and orchestration of cross-module data flows. Strong exposure to Fusion tools such as Fusion Setup Manager (FSM), ADF Diagnostics, OTBI/BI Publisher reporting, and Sandbox customization. Proficient in functional troubleshooting, requirement analysis, testing enhancements, streamlining business processes, and supporting day-to-day production operations for global manufacturing and supply chain teams.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/capgemini.gif" alt="" /></a>
 											<div class="inner">
+												<h4>Consultant</h4>
+												<p>Nov 2025- present
+												</br>Kolkata, West Bengal, India- Hybrid
+												</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/capgemini.gif" alt="" /></a>
+											<div class="inner">
 												<h4>Associate Consultant</h4>
-												<p>Oct 2023- present
+												<p>Oct 2023- Nov 2025
 												</br>Kolkata, West Bengal, India- Hybrid
 												</p>
 											</div>
